Fix spacing on multiple things

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ nav ul li a:hover {
   color: #860927;
 }
 
-li {
+a {
   display: inline-block;
   border-bottom: solid 2px #d89fb0;
 }
